# Fov-3DGS

./: .gitignore
fov3dgs/: .gitignore  batch_gen_naive_FR.sh  batch_mmfr_fps.sh  batch_naive_fps.sh  batch_ours_fps.sh  batch_pnum_analyzer.sh  combined_training_script.py  compose_models.py  eff_finetune.py  gaussian_wrapper.py  gen_naive_FR.py  hvs_loss_calc.py  hvs_metrics.py  metric_mask_learn.py  pnum_analyzer.py  prune.py  pyproject.toml  quality_eval.py  quality_eval_layers_mmfr.py  quality_eval_layers_naive.py  quality_eval_layers_ours.py  quality_metrics.py  quality_metrics_layer.py  render.py  render_compose_gazes_fps.py  render_compose_gazes_fps_mmfr copy.py  render_compose_gazes_fps_naive.py  render_naive.py  test_render_fov_fps.py
fov3dgs/arguments/: __init__.py
fov3dgs/gaussian_renderer/: __init__.py  network_gui.py
fov3dgs/gaussian_renderer_fov/: __init__.py
fov3dgs/gaussian_renderer_fov_mmfr/: __init__.py
fov3dgs/gaussian_renderer_fov_naive/: __init__.py
fov3dgs/scene/: __init__.py  cameras.py  dataset_readers.py  gaussian_model.py
fov3dgs/scripts/: run_multi_ecc_masking.py  run_prune.py  train_loss_eval.sh
fov3dgs/submodules/compress-diff-gaussian-rasterization/: setup.py
fov3dgs/submodules/compress-diff-gaussian-rasterization/compress_diff_gaussian_rasterization/: __init__.py
fov3dgs/submodules/diff-gaussian-rasterization/: pyproject.toml  setup.py
fov3dgs/submodules/diff-gaussian-rasterization/diff_gaussian_rasterization/: __init__.py
fov3dgs/submodules/diff-gaussian-rasterization_fov_pcheck_obb/: pyproject.toml  setup.py
fov3dgs/submodules/diff-gaussian-rasterization_fov_pcheck_obb/cuda_rasterizer/: rasterizer_impl.cu
fov3dgs/submodules/diff-gaussian-rasterization_fov_pcheck_obb/diff_gaussian_rasterization_fov_pcheck_obb/: __init__.py
fov3dgs/submodules/diff-gaussian-rasterization_fov_pcheck_obb/diff_gaussian_rasterization_fov_pcheck_obb.egg-info/: PKG-INFO  SOURCES.txt
fov3dgs/submodules/diff-gaussian-rasterization_mmfr_pcheck_obb/: setup.py
fov3dgs/submodules/diff-gaussian-rasterization_mmfr_pcheck_obb/diff_gaussian_rasterization_mmfr_pcheck_obb/: __init__.py
fov3dgs/submodules/diff-gaussian-rasterization_naive_pcheck_obb/: setup.py
fov3dgs/submodules/diff-gaussian-rasterization_naive_pcheck_obb/diff_gaussian_rasterization_naive_pcheck_obb/: __init__.py
fov3dgs/submodules/diff-gaussian-rasterization_pcheck_obb/: pyproject.toml  setup.py
fov3dgs/submodules/diff-gaussian-rasterization_pcheck_obb/cuda_rasterizer/: auxiliary.h  rasterizer_impl.cu
fov3dgs/submodules/diff-gaussian-rasterization_pcheck_obb/diff_gaussian_rasterization_pcheck_obb/: __init__.py
fov3dgs/submodules/diff-gaussian-rasterization_pcheck_obb/diff_gaussian_rasterization_pcheck_obb.egg-info/: PKG-INFO  SOURCES.txt
fov3dgs/submodules/diff-gaussian-rasterization_pcheck_obb_loss_weighted_max_count/: pyproject.toml  setup.py
fov3dgs/submodules/diff-gaussian-rasterization_pcheck_obb_loss_weighted_max_count/cuda_rasterizer/: rasterizer_impl.cu
fov3dgs/submodules/diff-gaussian-rasterization_pcheck_obb_loss_weighted_max_count/diff_gaussian_rasterization_pcheck_obb_loss_weighted_max_count/: __init__.py
fov3dgs/submodules/diff-gaussian-rasterization_pcheck_obb_loss_weighted_max_count/diff_gaussian_rasterization_pcheck_obb_loss_weighted_max_count.egg-info/: PKG-INFO  SOURCES.txt
fov3dgs/submodules/diff-gaussian-rasterization_pcheck_obb_max/: pyproject.toml  setup.py
fov3dgs/submodules/diff-gaussian-rasterization_pcheck_obb_sum/: pyproject.toml  setup.py
fov3dgs/submodules/simple-knn/: pyproject.toml  setup.py
fov3dgs/submodules/test/: pyproject.toml  setup.py
fov3dgs/tests/: README_fps_test.md  test_fov_rasterizer_fps.py
fov3dgs/utils/: camera_utils.py  loss_utils.py
(+9 files in other folders)
