[build-system]
# Specify build backend (setuptools is required for CUDAExtension)
requires = ["setuptools>=61.0", "wheel", "torch>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diff_gaussian_rasterization_fov_pcheck_obb"
version = "0.1.0"
description = "A CUDA extension built with PyTorch and uv"
requires-python = ">=3.12"
dependencies = ["torch>=2.0.0"]
